@@ -1,3 +1,7 @@
+2006-10-11  Marcus Brinkmann  <marcus@g10code.de>
+
+	* fallback.m4: Removed again.
+
 2006-10-10  Marcus Brinkmann  <marcus@g10code.de>
 
 	* fallback.m4: New file from Pth.
